First iteration of corrections based on reviewer`s comments
